--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@
                 <div class="gallery-item">
                     <img src="portrait.jpg" alt="Portrait">
                     <div class="gallery-item-caption">
-                        <h3>Village Elder</h3>
-                        <p>Character portrait from Mustang region</p>
+                        <h3>Protrait </h3>
+                        <p></p>
                     </div>
                 </div>
                 <div class="gallery-item">
