--- a/blog-post.html
+++ b/blog-post.html
@@ -631,7 +631,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Kritan Pokhrel</h3>
-                    <p>Civil Engineer & Infrastructure Specialist based in Pokhara, Nepal</p>
+                    <p> based in Pokhara, Nepal</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -650,13 +650,13 @@
                 </div>
                 <div class="footer-column">
                     <h3>Contact</h3>
-                    <p><i class="fas fa-envelope"></i> engineering@kritanpokhrel.com</p>
-                    <p><i class="fas fa-phone"></i> +977 98XXXXXXX</p>
+                    <p><i class="fas fa-envelope"></i> pokhrelkritan5@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +977 9748212184</p>
                     <p><i class="fas fa-map-marker-alt"></i> Pokhara, Nepal</p>
                 </div>
             </div>
             <div class="copyright">
-                <p>© 2024 Kritan Pokhrel. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+                <p>© 2025 Kritan Pokhrel. All rights reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
             </div>
         </div>
     </footer>
